@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Fixed bug when previewing a story that was copied from another
+story but hadn't been saved yet. [Michael Peters]
+
+=item *
+
 Added platform files to support Redhat Adaptive Server AS3 
 and AS4. [Jesse Erlbaum]
 
